400/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp
  namespace: app-201
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp
    spec:
      containers:
        - name: container
          image: 'quay.io/lglussen/web-app:v13'
          ports:
            - containerPort: 8080
              protocol: TCP
